# rust-tools-mcp

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/mcp-host/: Cargo.toml
crates/mcp-host/src/: main.rs
crates/mcp-plugin-sdk/: Cargo.toml
crates/mcp-plugin-sdk-macros/: Cargo.toml
crates/mcp-plugin-sdk-macros/src/: lib.rs
crates/mcp-plugin-sdk/src/: lib.rs
crates/mcp-plugin-types/: Cargo.toml
crates/mcp-plugin-types/src/: lib.rs
examples/hello-plugin/: Cargo.toml
examples/hello-plugin/src/: lib.rs
skills/create-rust-mcp-tool/: SKILL.md
