[package]
name = "mcp-host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mcp-host"
path = "src/main.rs"

[dependencies]
mcp-plugin-types = { path = "../mcp-plugin-types" }
libloading = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
