[package]
name = "mcp-host"
version = "0.1.0"
edition = "2021"
authors = ["Andy <andreas.bosteen@gmail.com>"]
license = "MIT"
repository = "https://github.com/Ochnee/rust-tools-mcp"
description = "MCP server that loads Rust cdylib plugins as MCP tools"

[[bin]]
name = "mcp-host"
path = "src/main.rs"

[dependencies]
mcp-plugin-types = { path = "../mcp-plugin-types" }
anyhow = "1"
libloading = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
