[package]
name = "mcp-plugin-types"
version = "0.1.0"
edition = "2021"
authors = ["Andy <andreas.bosteen@gmail.com>"]
license = "MIT"
repository = "https://github.com/Ochnee/rust-tools-mcp"
description = "Shared ABI types for the rust-tools-mcp plugin system"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
